        * Add the "get_elem_byte_size" native API.
        * Add the "new_array_proto" native API.
        * Fn->new_array_proto throw an exception when the length is lower than 0.
        * Add the "copy" native API.
        * Add Fn->is_array, Fn->is_numeric_array, Fn->is_mulnum_array
        * Add "new_array_proto_raw", "copy_raw" native APIs
        * Add copy operator
        [BUG FIX]
        * Fix the bug that Fn->new_array_proto doesn't create multi numeric array and number array correctly.
        
        [NON BACKWORD COMPATIBLE CHANGES]
        * Remove the syntax of no operand of warn and die statement.
          This is not documented, but was defined in parsing syntax.
        
0.9503  2021-02-08
        [CHANGE]
        * Add divui, divul, remui, remul operators.
        * Add new_string_len operator.
        
0.9502  2021-02-07
        [CHANGE]
        * SPVM::Document::LanguageSpecification becomes POD instead of HTML
        * SPVM::Document::Tutorial becomes POD instead of HTML
        * Add native api "string_basic_type_id"
        
        [NON BACKWORD COMPATIBLE CHANGES]
        * The keys of Hash module is copied defensively.
          If you check the equality of the keys using == operator,
          Please change eq operator instead.

0.9501  2021-02-04
        [CHANGE]
        * Improve compilation error messages. All method expressions is Foo->bar.
        * Improve compilation error messages. All field expressions is Foo->{bar}.
        * Improve compilation error messages. All class variable expressions is $Foo::Bar.
        * Improve a assignment compilation error messege. "argument 2" -> "2th argument".
        * Use native api "get_chars" more instead of "get_elems_byte" in the right places.
        * Add mutable type qualifier.
        * Improve a compilation error messege when the class is not finished at the end of the file.
        * Add "value" method to StringBuffer class.
        
        [NON BACKWORD COMPATIBLE CHANGES]