@@ -20,6 +20,7 @@ Revision history for SPVM
         * Add Fn->is_array, Fn->is_numeric_array, Fn->is_mulnum_array
         * Add "new_array_proto_raw", "copy_raw" native APIs
         * Add copy operator
+        * Add the "shorten" native API.
         [BUG FIX]
         * Fix the bug that Fn->new_array_proto doesn't create multi numeric array and number array correctly.
         
